Change the CSS to have x-direction overflow also fix bug of dragging lists

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -77,6 +77,11 @@ h2 {
   font-size: 17px;
 }
 
+textarea {
+  padding: 8px;
+  box-sizing: border-box;
+}
+
 // sign in form
 .signin-form {
   padding: 25px 50px;
@@ -371,7 +376,7 @@ header {
 }
 
 .lists {
-  overflow-y: hidden;
+  min-height: 100px;
 }
 
 .list-wrapper {
@@ -408,13 +413,15 @@ header {
 
 .list-form {
   background: #eee;
-  float: left;
+  // float: left;
   position: absolute;
-  padding: 3px 0;
+  border-radius: 3px;
+  padding: 4px 0;
 }
 
 .list-form input {
   width: 260px;
+  box-shadow: inset 0 0 5px 2px rgb(221, 221, 221);
 }
 
 .list-form input:focus {
@@ -522,8 +529,6 @@ input[type=text]{
 
 .modal-card-form textarea {
   margin: 5px 0;
-  padding: 10px;
-  font-size: 12px;
   width: 350px;
   height: 130px;
   overflow: auto;
